--- a/src/Shared Components/NavBar.css
+++ b/src/Shared Components/NavBar.css
@@ -1,87 +1,51 @@
-/* Navbar.css */
+* {
+  box-sizing: border-box;
+}
 
-/* Navbar container */
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+body {
+  margin: 0;
+}
+
+.container {
+  margin: 1rem;
+  text-align: center;
+}
+
+.nav {
   background-color: #333;
   color: white;
-  padding: 10px 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+  gap: 2rem;
+  padding: 0 1rem;
 }
 
-/* Navbar brand/logo */
-.navbar-logo {
-  font-size: 24px;
-  font-weight: bold;
+.site-title {
+  font-size: 2rem;
 }
 
-/* Navbar toggle button */
-.navbar-toggle {
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-  color: white;
-  font-size: 18px;
-}
-
-.navbar-toggle.active {
-  color: orange;
-}
-
-/* Navbar links container */
-.navbar-links {
+.nav ul {
+  padding: 0;
+  margin: 0;
   list-style: none;
   display: flex;
-  margin: 0;
-  padding: 0;
+  gap: 1rem;
 }
 
-/* Individual navbar link */
-.navbar-link {
-  margin: 0 15px;
-}
-
-/* Open state for the navbar */
-.navbar-links.open {
-  display: flex;
-  flex-direction: column;
-  background-color: #444;
-  position: absolute;
-  top: 100%;
-  left: 0;
-  width: 100%;
-  padding: 10px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-}
-
-.navbar-link a {
-  color: white;
+.nav a {
+  color: inherit;
   text-decoration: none;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  padding: .25rem;
 }
 
-/* Media query for small screens */
-@media (max-width: 768px) {
-  .navbar {
-    flex-direction: column;
-    align-items: flex-start;
-  }
+.nav li.active {
+  background-color: #555;
+}
 
-  .navbar-links {
-    display: none;
-  }
-
-  .navbar-links.open {
-    position: static;
-    background-color: transparent;
-    box-shadow: none;
-  }
-
-  .navbar-link {
-    margin: 10px 0;
-  }
-
-  .navbar-toggle {
-    display: block;
-  }
+.nav li:hover {
+  background-color: #777;
 }
